--- a/Pacman.UnitTests/packages.config
+++ b/Pacman.UnitTests/packages.config
@@ -1,14 +1,41 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Castle.Core" version="4.4.0" targetFramework="net461" />
+  <package id="coverlet.collector" version="1.3.0" targetFramework="net461" developmentDependency="true" />
+  <package id="coverlet.msbuild" version="2.9.0" targetFramework="net461" developmentDependency="true" />
+  <package id="JetBrains.dotCover.CommandLineTools" version="2020.2.4" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.AspNet.SignalR.Client" version="2.4.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.SignalR.Core" version="2.4.1" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Authorization" version="2.2.0" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Connections.Abstractions" version="5.0.0" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Http.Features" version="5.0.0" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.SignalR.Common" version="5.0.0" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.SignalR.Core" version="1.1.0" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.SignalR.Protocols.Json" version="5.0.0" targetFramework="net461" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net461" />
+  <package id="Microsoft.CodeCoverage" version="16.8.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="5.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="5.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Options" version="5.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Primitives" version="5.0.0" targetFramework="net461" />
   <package id="Microsoft.Owin" version="2.1.0" targetFramework="net461" />
   <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net461" />
   <package id="Moq" version="4.15.1" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="OpenCover" version="4.7.922" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net461" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net461" />
+  <package id="ReportGenerator" version="4.8.0" targetFramework="net461" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
+  <package id="System.IO.Pipelines" version="5.0.0" targetFramework="net461" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net461" />
+  <package id="System.Net.Sockets" version="4.3.0" targetFramework="net461" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
+  <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net461" />
+  <package id="System.Text.Encodings.Web" version="5.0.0" targetFramework="net461" />
+  <package id="System.Text.Json" version="5.0.0" targetFramework="net461" />
+  <package id="System.Threading.Channels" version="5.0.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
   <package id="xunit" version="2.4.1" targetFramework="net461" />
   <package id="xunit.abstractions" version="2.0.3" targetFramework="net461" />
